--- a/assignments/earththoughts/www/index.html
+++ b/assignments/earththoughts/www/index.html
@@ -9,15 +9,17 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Porn Thoughts</title>
+    <title>Earth Thoughts</title>
 
     <!-- Bootstrap core CSS -->
     <script
-    src="/js/jquery-3.2.1.min.js"></script>
-    <script src="/js/popper.min.js"></script>
+    src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     
-    <script src="/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
@@ -30,8 +32,8 @@
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
 <style>
@@ -39,7 +41,7 @@
         background-image: url("https://i.redd.it/fsipwrv7fgkz.jpg");
         background-color: #17234E;
         margin-bottom: 0;`enter code here`
-        min-height: 50%;
+        min-height: 100%;
         background-repeat: no-repeat;
         background-position: center;
         -webkit-background-size: cover;
@@ -59,13 +61,6 @@
 
     <div class="container">
     <div class="header clearfix">
-        <nav>
-        <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Home</a></li>
-            <li role="presentation"><a href="#">About</a></li>
-            <li role="presentation"><a href="#">Contact</a></li>
-        </ul>
-        </nav>
         <h3 class="text-muted">Earth Porn and Shower Thoughts</h3>
     </div>
 
@@ -74,33 +69,10 @@
         <p class="lead" id="main_text">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
         
     </div>
-    <p><a class="btn btn-lg btn-success" href=""http://localhost:5050/get_image""http://localhost:5050/get_thought"" role="button">New Porn and Thought?</a></p>
-    <div class="row marketing">
-        <div class="col-lg-6">
-        <h4>Subheading</h4>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-        <h4>Subheading</h4>
-        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-        <h4>Subheading</h4>
-        <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-
-        <div class="col-lg-6">
-        <h4>Subheading</h4>
-        <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-        <h4>Subheading</h4>
-        <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-        <h4>Subheading</h4>
-        <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-        </div>
-    </div>
+    <p><a class="btn btn-lg btn-success" href=""http://localhost:5050/get_image""http://localhost:5050/get_thought"" role="button">Get Another?</a></p>
 
     <footer class="footer">
-        <p>&copy; 2016 cwcook0414.</p>
+        <p>https://github.com/cwcook0414/FullStack-Cook</p>
     </footer>
 
     </div> <!-- /container -->
