--- a/assignments/earththoughts/index.html
+++ b/assignments/earththoughts/index.html
@@ -8,20 +8,16 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/images/favicon.png">
 
     <title>Earth Thoughts</title>
 
     <!-- Bootstrap core CSS -->
-    <script language="JavaScript" type="text/javascript" src="/js/jquery-3.2.1.min.js"></script>
-    <script language="JavaScript" type="text/javascript" src="/js/popper.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+    <script language="JavaScript" type="text/javascript" src="js/popper.min.js"></script>
 
-    <script language="JavaScript" type="text/javascript" src="/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-
-
-    <!-- Custom styles for this template -->
-    <link href="/css/jumbotron-narrow.css" rel="stylesheet">
+    <script language="JavaScript" type="text/javascript" src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="css/jumbotron-narrow.css" rel="stylesheet">
 
 
 </head>
@@ -44,7 +40,7 @@
     <script>
         $(function() {
             console.log("ready!");
-            $.get("http://localhost:5050/get_image", function(data) {
+            $.get("http://chriswcook.xyz:5050/get_image", function(data) {
 
                 console.log(data.url)
                 $('#main_image').css('background-image', 'url(' + data.url + ')');
@@ -54,7 +50,7 @@
     <script>
         $(function() {
             console.log("ready!");
-            $.get("http://localhost:5050/get_thought", function(data) {
+            $.get("http://chriswcook.xyz:5050/get_thought", function(data) {
 
                 console.log(data.thought)
                 thought = data.thought
